refactor URL creation